Hot fix for font spacing

--- a/src/PrimaryView/primaryview.scss
+++ b/src/PrimaryView/primaryview.scss
@@ -14,6 +14,7 @@ body {
 h1 {
 	font-family: 'Lexend Zetta', sans-serif;
 	font-size: 40px;
+	letter-spacing: -5px;
 }
 
 h2 {
